# mcp-google-ads

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: GUIA-AUTENTICACAO-MCP.md
src/mcp_google_ads/: __init__.py  auth.py  config.py  coordinator.py  exceptions.py  server.py  utils.py  validators.py
src/mcp_google_ads/tools/: __init__.py  account_budget.py  account_management.py  accounts.py  ad_customizers.py  ad_groups.py  ads.py  ai_generation.py  audiences.py  batch.py  bidding.py  budgets.py  campaign_criteria.py  campaign_drafts.py  campaign_types.py  campaigns.py  conversions.py  dashboard.py  diagnostics.py  experiments.py  extensions.py  incentives.py  keywords.py  labels.py  recommendations.py  remarketing.py  reporting.py  search.py  shared_sets.py  simulations.py  smart_campaigns.py  targeting.py  user_lists.py  (+1 more)
tests/: __init__.py  conftest.py  test_account_budget.py  test_account_management.py  test_accounts.py  test_ad_customizers.py  test_ad_groups.py  test_ads.py  test_ai_generation.py  test_audiences.py  test_auth.py  test_batch.py  test_bidding.py  test_bidding_new.py  test_budgets.py  test_campaign_criteria.py  test_campaign_drafts.py  test_campaign_types.py  test_campaigns.py  test_config.py  test_conversions.py  test_dashboard.py  test_diagnostics.py  test_experiments.py  test_extensions.py  test_incentives.py  test_keywords.py  test_labels.py  test_recommendations.py  test_remarketing.py  test_reporting.py  test_search.py  test_server.py  test_shared_sets.py  test_simulations.py  test_smart_campaigns.py  test_targeting.py  test_user_lists.py  test_utils.py  test_youtube_uploads.py
